k8s/manual/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: api
 namespace: mlop-test
spec:
 replicas: 1
 selector:
   matchLabels:
     app: api
 template:
   metadata:
     labels:
       app: api
   spec:
     containers:
       - name: api
         image: mlop-api:manualV3
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 8080
         livenessProbe:
           httpGet:
             path: /healthz
             port: 8080
         readinessProbe:
           httpGet:
             path: /readyz
             port: 8080
