k8s/manual/api-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: api
 namespace: mlop-test
spec:
 selector:
   app: api
 ports:
   - port: 8080
