k8s/manual/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend
 namespace: mlop-test
spec:
 selector:
   app: frontend
 ports:
   - port: 80
